upload w6 layout 1 and 2 with adaptive design

--- a/week5_adaptive.html
+++ b/week5_adaptive.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/2mes/styles/normalize.css">
-    <link rel="stylesheet" href="/2mes/styles/week5.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/week5_adaptive.css">
 
 </head>
 
@@ -19,7 +19,7 @@
 
     </header>
 
-    <main>
+    <main class="main">
 
         <section class="sectionflex">
             <h2 class="flexh2">ОСНОВНАЯ ЧАСТЬ</h2>
