--- a/week6_layout2.html
+++ b/week6_layout2.html
@@ -55,32 +55,32 @@
             <div class="divselect">
                 <h3>Donuts</h3>
                 <select>
-                    <option value="lizard1" selected>Original</option>
-                    <option value="lizard2">Of the Day</option>
-                    <option value="lizard3">Boys</option>
-                    <option value="lizard1">Girls</option>
-                    <option value="lizard2">Special flavored</option>
-                    <option value="lizard3">Surprise</option>
+                    <option value="donut1" selected>Original</option>
+                    <option value="donut2">Of the Day</option>
+                    <option value="donut3">Boys</option>
+                    <option value="donut4">Girls</option>
+                    <option value="donut5">Special flavored</option>
+                    <option value="donut6">Surprise</option>
                 </select>
             </div>
 
             <div class="divselect">
                 <h3>Size</h3>
                 <select>
-                    <option value="lizard1">S (6)</option>
-                    <option value="lizard2" selected>M (12)</option>
-                    <option value="lizard3">L (24)</option>
-                    <option value="lizard4">Big box XL (50)</option>
+                    <option value="box1">S (6)</option>
+                    <option value="box2" selected>M (12)</option>
+                    <option value="box3">L (24)</option>
+                    <option value="box4">Big box XL (50)</option>
                 </select>
             </div>
             <div class="divselect">
                 <h3>Add smth</h3>
                 <select>
-                    <option value="lizard1">Poster</option>
-                    <option value="lizard2">Sticker</option>
-                    <option value="lizard3" selected>Surprise</option>
-                    <option value="lizard4">Pen</option>
-                    <option value="lizard5">Note</option>
+                    <option value="add1">Poster</option>
+                    <option value="add2">Sticker</option>
+                    <option value="add3" selected>Surprise</option>
+                    <option value="add4">Pen</option>
+                    <option value="add5">Note</option>
                 </select>
             </div>
 
