--- a/week8_bootstrap.html
+++ b/week8_bootstrap.html
@@ -12,6 +12,12 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <style>
+        .header {
+            position: absolute;
+            color: white;
+            margin-left: 20px;
+        }
+
         .container-fluid,
         .footer {
             background-color: rgb(55, 52, 52);
@@ -22,14 +28,15 @@
             padding-bottom: 2.6em;
             padding-right: 2em;
         }
-
-        .copyright {}
     </style>
 
 </head>
 
 <body>
 
+    <header class="header">
+        <h4>Start Bootstrap</h4>
+    </header>
 
     <div class="container-fluid">
         <div class="nav justify-content-end">
@@ -126,7 +133,7 @@
     </div>
 
     <div class="footer">
-        <p class="copyright-text text-white text-center">Copyright (c) Your Website 2022</p>
+        <h4 class="copyright-text text-white text-center">Copyright (c) Your Website 2022</h4>
     </div>
 
 
