add week8_secondpage_bem +css, finished week8_firstpage_bem +css

--- a/week8_bootstrap.html
+++ b/week8_bootstrap.html
@@ -53,7 +53,6 @@
         </div>
     </div>
 
-
     <div class="container container__welcome">
         <div class="row">
             <div class="col">
@@ -81,7 +80,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="card text-center bg-light border-primary" style="width: 15rem;">
-                    <img class="card-img-top" src="./assets/германия.jpeg" alt="страна Германия">
+                    <img class="card-img-top" src="./assets/g.jpeg" alt="страна Германия">
                     <div class="card-body">
                         <h5 class="card-title">Германия</h5>
                         <p class="card-text text-justify">Бронируйте наши самые популярные направления во Франкфурт,
@@ -94,7 +93,7 @@
             </div>
             <div class="col-sm-3">
                 <div class="card text-center bg-light border-primary" style="width: 15rem;">
-                    <img class="card-img-top" src="./assets/япония.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="./assets/y.jpeg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Япония</h5>
                         <p class="card-text text-justify">Выбирайте направления в Киото, Осаку или Токио. В
@@ -106,7 +105,7 @@
             </div>
             <div class="col-sm-3">
                 <div class="card text-center bg-light border-primary" style="width: 15rem;">
-                    <img class="card-img-top" src="./assets/нью йорк.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="./assets/n.jpeg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Северная Америка</h5>
                         <p class="card-text text-justify"> Посетите известные всем города. Большое яблоко - Нью-Йорк,
@@ -118,7 +117,7 @@
             </div>
             <div class="col-sm-3">
                 <div class="card text-center bg-light border-primary" style="width: 15rem;">
-                    <img class="card-img-top" src="./assets/дубай.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="./assets/d.jpeg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">ОАЭ</h5>
                         <p class="card-text text-justify">Откройте дверь в сказку, культуру арабского мира,
