--- a/week8_firstpage_bem.html
+++ b/week8_firstpage_bem.html
@@ -20,15 +20,17 @@
 <body class="body">
 
     <header class="header">
-        <h4>ВИАРУШКА</h4>
+        <h4 class="header__name">ВИАРУШКА</h4>
     </header>
 
-    <div class="container container__logo">
-        <img src="./assets/augmented-reality.png" width="50" alt="logovrsmall">
-    </div>
+    <div class="container">
+        <div class="container__logo">
+            <img class="container__image" src="./assets/augmented-reality.png" width="50" alt="logovrsmall">
+        </div>
 
-    <div class="container container__basket">
-        <button class="btn btn-primary" type="submit">КОРЗИНА</button>
+        <div class="container__basket">
+            <button class="btn btn_basket btn-primary" type="submit">КОРЗИНА</button>
+        </div>
     </div>
 
     <main class="main">
